--- a/website/index.html
+++ b/website/index.html
@@ -33,7 +33,6 @@
         <a href="https://google.com">A link to google</a>
         <button>A button</button>
         <button id="find-me-fast">A button</button>
-        <button onclick="addButton()">A button that adds a button</button>
         <img src="https://isthisa.computer/api/static/images/red.jpg">
 
         <!-- Javascript is how to change an html page dynamically -->
@@ -46,7 +45,10 @@
         </script>
 
         <!-- You can also have javascript in an external document -->
-        <script src="index.js"></script>
+        <!-- <script src="index.js"></script> -->
+
+        <!-- Uncomment this once you've added the external javascript -->
+        <!-- <button onclick="addButton()">A button that adds a button</button> -->
 
     </body>
 </html>
