--- a/yourToken/index.html
+++ b/yourToken/index.html
@@ -27,6 +27,7 @@
             #find-me-fast {
                 background-color: red;
             }
+        <button id="find-me-fast">Connect</button>
         </style>
 
         <!-- This is external javascript for interacting with the blockchain -->
